--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^1.3.1",
-    "http-server": "^0.11.1",
     "lighthouse": "^5.0.0",
+    "local-web-server": "^2.6.1",
     "marked": "^0.6.1",
     "natives": "1.1.6",
     "node-sass-glob-importer": "^5.3.1",
@@ -43,7 +43,7 @@
     "create-site": "node ./.scripts/create-site",
     "build": "run-s build:*",
     "test:ava": "ava --tap | tap-xunit > ./results/ava.xml",
-    "test:lighthouse": "lighthouse http://localhost:8080/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits is-on-https --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
+    "test:lighthouse": "lighthouse https://localhost:8000/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits is-on-https --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
     "test:broken-links": "run-s test:broken-links:*",
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
