--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ test-site: &test-site
           - v3-dependencies-{{ checksum "yarn.lock" }}
     - run: |
         sudo apt-get install libnss3-tools
+        mkdir -p $HOME/.pki/nssdb
+        certutil -d $HOME/.pki/nssdb -N --empty-password
         certutil -d sql:$HOME/.pki/nssdb -A -t "P,," -n lws-cert -i ./node_modules/lws/ssl/lws-cert.pem
     - run:
         command: yarn run ws --compress --http2 -d ./public/$HOST
