--- a/www.topmonks.com/config/path-config.json
+++ b/www.topmonks.com/config/path-config.json
@@ -19,17 +19,17 @@
 
   "javascripts": {
     "src": "javascripts",
-    "dest": "javascripts"
+    "dest": "assets/js"
   },
 
   "stylesheets": {
     "src": "stylesheets",
-    "dest": "stylesheets"
+    "dest": "assets/css"
   },
 
   "images": {
     "src": "images",
-    "dest": "images"
+    "dest": "assets/img"
   },
 
   "fonts": {
@@ -39,6 +39,6 @@
 
   "icons": {
     "src": "icons",
-    "dest": "images"
+    "dest": "assets/img"
   }
 }
