Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-.idea/
-.idea/workspace.xml
-node_modules/
-/public/
-/package-lock.json
-/results/
 *.log
-.
-team.json
-/.pulumi/
 .DS_Store
-.DS_Store
+.env
+.idea/
+/package-lock.json
+/public/
+/results/
+node_modules/
