Set Cloudinary credentials for Build step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,7 +281,8 @@ jobs:
 workflows:
   build_and_deploy:
     jobs:
-      - build
+      - build:
+          context: org-global
       - pre-provision:
           context: org-global
       - preview-provision:
