New site: balehu.com

--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "test:broken-links:monkstage.topmonks.com": "blcl ./public/monkstage.topmonks.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
     "start:www.xduediligence.com": "BLENDID_CONFIG_PATH=./www.xduediligence.com/config/ blendid",
     "build:www.xduediligence.com": "BLENDID_CONFIG_PATH=./www.xduediligence.com/config/ blendid -- build",
-    "test:broken-links:www.xduediligence.com": "blcl ./public/www.xduediligence.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com"
+    "test:broken-links:www.xduediligence.com": "blcl ./public/www.xduediligence.com -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
+    "start:balehu.com": "BLENDID_CONFIG_PATH=./balehu.com/config/ blendid",
+    "build:balehu.com": "BLENDID_CONFIG_PATH=./balehu.com/config/ blendid -- build"
   }
 }
