circleci config for balehu.topmonks.com

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -278,6 +278,16 @@ jobs:
       AWS_CLOUDFRONT_DISTRIBUTION_ID: E22G4M3HL57V9Z
       HOST: xixo-demo.topmonks.com
 
+  test-balehu-topmonks-com:
+    <<: *test-site
+    environment:
+      HOST: balehu.topmonks.com
+
+  deploy-balehu-topmonks-com:
+    <<: *s3-deploy
+    environment:
+      HOST: balehu.topmonks.com
+
 workflows:
   build_and_deploy:
     jobs:
@@ -325,6 +335,9 @@ workflows:
           requires:
             - build
       - test-www-hookamonk-com:
+          requires:
+            - build
+      - test-balehu-topmonks-com:
           requires:
             - build
       - deploy-www-hookamonk-com:
@@ -404,6 +417,14 @@ workflows:
           requires:
             - provision
             - build
+          filters:
+            branches:
+              only: master
+      - deploy-balehu-topmonks-com:
+          context: org-global
+          requires:
+            - provision
+            - test-balehu-topmonks-com
           filters:
             branches:
               only: master
