disable lighthouse tests for balehu temporarily - wait for build...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -424,6 +424,7 @@ workflows:
           context: org-global
           requires:
             - provision
+            - build
 #            - test-balehu-topmonks-com
           filters:
             branches:
