--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,6 +279,17 @@ jobs:
       AWS_CLOUDFRONT_DISTRIBUTION_ID: E3CP5QY5Q88VXM
       HOST: www.xduediligence.com
 
+  test-monkslab-cz:
+    <<: *test-site
+    environment:
+      HOST: monkslab.cz
+
+  deploy-monkslab-cz:
+    <<: *s3-deploy
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: E1P5V9ZE9J2UMI
+      HOST: monkslab.cz
+
 workflows:
   build_and_deploy:
     jobs:
@@ -325,6 +336,9 @@ workflows:
       - test-prodeti-topmonks-cz:
           requires:
             - build
+      - test-monkslab-cz:
+          - requires:
+              - build
 #      - test-www-hookamonk-com:
 #          requires:
 #            - build
@@ -397,6 +411,14 @@ workflows:
           requires:
             - provision
             - test-caffe-topmonks-cz
+          filters:
+            branches:
+              only: master
+      - deploy-monkslab-cz:
+          context: org-global
+          requires:
+            - provision
+            - test-monkslab-cz
           filters:
             branches:
               only: master
