Enable Hookamonk.com deploy without tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -411,3 +411,11 @@ workflows:
           filters:
             branches:
               only: master
+      - deploy-www-hookamonk-com:
+          context: org-global
+          requires:
+            - provision
+            - build 
+          filters:
+            branches:
+              only: master
