--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ node_modules/
 www.topmonks.cz/src/data/team.json
 www.topmonks.cz/src/data/team.json
 www.topmonks.cz/src/data/team.json
+package.json
+package.json
+websites.json
