--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
     "test": "run-p test:eslint test:stylelint",
+    "pulumi:up": "AWS_PROFILE=topmonks pulumi up --skip-preview",
+    "pulumi:pre": "AWS_PROFILE=topmonks pulumi preview",
+    "pulumi:refresh": "AWS_PROFILE=topmonks pulumi refresh",
     "pulumi:fetch": "mkdir -p ~/.pulumi && aws s3 sync --profile=topmonks s3://topmonks-pulumi-state/ ~/.pulumi/",
     "pulumi:push": "aws s3 sync --profile=topmonks ~/.pulumi/ s3://topmonks-pulumi-state/ --exclude plugins/* --exclude _plugins/* --exclude templates/* --exclude bin/* --exclude credentials.json",
     "start:www.topmonks.com": "BLENDID_CONFIG_PATH=./www.topmonks.com/config/ blendid",
