--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material/layout-grid": "^3.1.0",
     "@pulumi/aws": "^1.7.0",
     "@pulumi/pulumi": "^1.3.4",
+    "@types/node": "^12.11.7",
     "bootstrap": "4.3.1",
     "jquery": "3.4.1",
     "jquery.easing": "^1.4.1",
