--- a/package.json
+++ b/package.json
@@ -91,6 +91,6 @@
     "test:broken-links:monkslab.cz": "blcl ./public/monkslab.cz -ro --exclude linkedin.com --exclude maps.googleapis.com --exclude insight.topmonks.com/avatar/ --exclude caffe.topmonks.cz --exclude blog.topmonks.com",
     "start:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ blendid",
     "build:www.hlidacshopu.cz": "BLENDID_CONFIG_PATH=./www.hlidacshopu.cz/config/ blendid -- build",
-    "test:broken-links:www.hlidacshopu.cz": "blcl ./public/www.hlidacshopu.cz -ro --exclude www.alza.cz --exclude alza.cz --exclude www.datart.cz"
+    "test:broken-links:www.hlidacshopu.cz": "blcl ./public/www.hlidacshopu.cz -ro --exclude www.alza.cz --exclude alza.cz  --exclude www.czc.cz --exclude www.datart.cz --exclude www.itesco.cz --exclude www.kasa.cz --exclude www.kosik.cz --exclude www.lekarna.cz --exclude www.mall.cz --exclude www.mironet.cz --exclude www.mountfield.cz --exclude www.notino.cz --exclude www.rohlik.cz --exclude www.tsbohemia.cz"
   }
 }
