--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "ecmaVersion": 9,
     "ecmaFeatures": {
       "spread": true
-    }
+    },
+    "sourceType": "module"
   },
   "plugins": [
     "prettier"
