[blockchain.topmonks.com] Delete and ignore generated JSON files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ node_modules/
 www.topmonks.cz/src/data/team.json
 
 www.hlidacshopu.cz/src/data/media.json
+blockchain.topmonks.com/src/data/podcasts.json
+blockchain.topmonks.com/src/data/articles.json
