Session Monk website

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,17 @@ jobs:
     environment:
       HOST: monkstage.topmonks.com
 
+  deploy-session-monk-topmonks-com:
+    <<: *s3-deploy
+    environment:
+      AWS_CLOUDFRONT_DISTRIBUTION_ID: XXXXXXXXXXXXX
+      HOST: session-monk.topmonks.com
+
+  test-msession-monk-topmonks-com:
+    <<: *test-site
+    environment:
+      HOST: session-monk.topmonks.com
+
   deploy-studio-topmonks-com:
     <<: *s3-deploy
     environment:
