Test website scaffolding

--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "test:broken-links": "run-s test:broken-links:*",
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
-    "test": "run-p test:eslint test:stylelint",
+    "test:website-create": "yarn create-site test.topmonks.com",
+    "test:website-remove": "yarn remove-site test.topmonks.com",
+    "test:website-scaffolding": "run-s test:website-create test:website-remove",
+    "test": "run-p test:eslint test:stylelint test:website-scaffolding",
     "pulumi:up": "AWS_PROFILE=topmonks pulumi up --skip-preview",
     "pulumi:pre": "AWS_PROFILE=topmonks pulumi preview",
     "pulumi:refresh": "AWS_PROFILE=topmonks pulumi refresh",
