--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv-cli": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-lit": "^1.2.0",
     "eslint-plugin-prettier": "^3.1.1",
     "gulp-cloudinary-upload": "^1.0.1",
     "gulp-markdown-to-json": "^1.1.0",
