--- a/www.topmonks.cz/config/path-config.json
+++ b/www.topmonks.cz/config/path-config.json
@@ -2,14 +2,15 @@
   "src": "./www.topmonks.cz/src",
   "dest": "./public/www.topmonks.cz",
 
-  "data": {
-    "team": "./www.topmonks.com/src/data/team",
-    "dest": "./data/"
-  },
-
   "html": {
     "src": "html",
     "dest": "./"
+  },
+
+  "data": {
+    "src": "data",
+    "team": "./www.topmonks.com/src/data/team",
+    "dest": "./data/"
   },
 
   "static": {
