--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "dotenv-cli": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-ava": "^9.0.0",
     "eslint-plugin-lit": "^1.2.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
     "gulp-cloudinary-upload": "^1.0.1",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^1.3.1",
@@ -50,10 +52,13 @@
     "remove-site": "node ./.scripts/remove-site",
     "build": "run-s build:*",
     "serve": "ws --http2 --compress -d ./public/$HOST",
+    "lint:es": "eslint ./",
+    "lint:scss": "stylelint-config-prettier-check",
+    "lint": "run-p lint:*",
     "test:ava": "ava --tap | tap-xunit > ./results/ava.xml",
     "test:lighthouse": "lighthouse https://localhost:8000/ --output json --output html --output-path ./results/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
     "test:broken-links": "run-s test:broken-links:*",
-    "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
+    "test:eslint": "eslint ./  --format junit --output-file ./results/eslint.xml",
     "test:stylelint": "stylelint-config-prettier-check",
     "test:website-create": "yarn create-site test.topmonks.com",
     "test:website-remove": "yarn remove-site test.topmonks.com",
