--- a/package.json
+++ b/package.json
@@ -7,15 +7,10 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.9.0",
     "@material/layout-grid": "^4.0.0",
     "@pulumi/aws": "^1.16.0",
     "@pulumi/pulumi": "^1.7.1",
-    "@types/node": "^12.12.18",
-    "bootstrap": "4.3.1",
-    "jquery": "3.4.1",
-    "jquery.easing": "^1.4.1",
-    "popper.js": "^1.16.0"
+    "@types/node": "^12.12.18"
   },
   "devDependencies": {
     "@topmonks/blendid": "git://github.com/topmonks/blendid.git",
